// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Supertab .getOfferings with no existing tab return offerings with default currency 1`] = `
[
  {
    "connectedSubscriptionOffering": undefined,
    "description": "Test Offering Description",
    "duration": {
      "count": 5,
      "unit": "minute",
    },
    "id": "test-offering-id",
    "paymentModel": "pay_later",
    "price": {
      "amount": 100,
      "currency": {
        "baseUnit": 100,
        "isoCode": "USD",
      },
      "text": "$1.00",
    },
    "prices": [
      {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "USD",
        },
        "text": "$1.00",
      },
      {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "EUR",
        },
        "text": "€1.00",
      },
      {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "BRL",
        },
        "text": "R$1.00",
      },
    ],
    "salesModel": "time_pass",
  },
]
`;

exports[`Supertab .getExperience return first experience if id is not supplied 1`] = `
{
  "id": "test-experience-1",
  "name": "My Experience",
  "offerings": [
    {
      "description": "Test Offering Description",
      "duration": {
        "count": 5,
        "unit": "minute",
      },
      "id": "test-offering-id",
      "paymentModel": "pay_later",
      "price": {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "USD",
        },
        "text": "$1.00",
      },
      "prices": [
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "EUR",
          },
          "text": "€1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "BRL",
          },
          "text": "R$1.00",
        },
      ],
      "salesModel": "time_pass",
    },
  ],
  "product": {
    "contentKey": "test-content-key",
    "contentKeyRequired": true,
    "id": "test-product",
    "name": "Test Product",
  },
  "type": "basic_paygate",
  "uiConfig": {},
  "upsells": [
    {
      "discount": 0,
      "mainOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_later",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "time_pass",
      },
      "upsellOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_now",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "subscription",
      },
    },
  ],
}
`;

exports[`Supertab .getExperience return experience by id 1`] = `
{
  "id": "test-experience-2",
  "name": "My Experience",
  "offerings": [
    {
      "description": "Test Offering Description",
      "duration": {
        "count": 5,
        "unit": "minute",
      },
      "id": "test-offering-id",
      "paymentModel": "pay_later",
      "price": {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "USD",
        },
        "text": "$1.00",
      },
      "prices": [
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "EUR",
          },
          "text": "€1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "BRL",
          },
          "text": "R$1.00",
        },
      ],
      "salesModel": "time_pass",
    },
  ],
  "product": {
    "contentKey": "test-content-key",
    "contentKeyRequired": true,
    "id": "test-product",
    "name": "Test Product",
  },
  "type": "basic_paygate",
  "uiConfig": {},
  "upsells": [
    {
      "discount": 0,
      "mainOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_later",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "time_pass",
      },
      "upsellOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_now",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "subscription",
      },
    },
  ],
}
`;

exports[`Supertab .getExperience returns upsells 1`] = `
{
  "id": "test-experience-1",
  "name": "My Experience",
  "offerings": [
    {
      "description": "Test Offering Description",
      "duration": {
        "count": 5,
        "unit": "minute",
      },
      "id": "test-offering-id",
      "paymentModel": "pay_later",
      "price": {
        "amount": 100,
        "currency": {
          "baseUnit": 100,
          "isoCode": "USD",
        },
        "text": "$1.00",
      },
      "prices": [
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "EUR",
          },
          "text": "€1.00",
        },
        {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "BRL",
          },
          "text": "R$1.00",
        },
      ],
      "salesModel": "time_pass",
    },
  ],
  "product": {
    "contentKey": "test-content-key",
    "contentKeyRequired": true,
    "id": "test-product",
    "name": "Test Product",
  },
  "type": "basic_paygate",
  "uiConfig": {},
  "upsells": [
    {
      "discount": 0,
      "mainOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_later",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "time_pass",
      },
      "upsellOffering": {
        "description": "Test Offering Description",
        "duration": {
          "count": 5,
          "unit": "minute",
        },
        "id": "test-offering-id",
        "paymentModel": "pay_now",
        "price": {
          "amount": 100,
          "currency": {
            "baseUnit": 100,
            "isoCode": "USD",
          },
          "text": "$1.00",
        },
        "prices": [
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "USD",
            },
            "text": "$1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "EUR",
            },
            "text": "€1.00",
          },
          {
            "amount": 100,
            "currency": {
              "baseUnit": 100,
              "isoCode": "BRL",
            },
            "text": "R$1.00",
          },
        ],
        "salesModel": "subscription",
      },
    },
  ],
}
`;
